# py-submit

./: .pre-commit-config.yaml  README.md  adsl.sas  adsl.txt  pyproject.toml  submit.py
.github/workflows/: pytest.yml
docs/: usage.md
src/submit/: submit.py
tests/: conftest.py  contents_source.py  contents_validate.py  test_submit.py
