[project]
name = "submit"
version = "0.6.1"
description = "Crop the SAS code to meet the submission requirements"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.4.1",
    "natsort>=8.4.0"
]
authors = [{ name = "Snoopy1866" }]
license = { file = "LICENSE" }
keywords = [
    "sas",
    "nmpa",
    "regulatory",
    "guidelines",
    "submit"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
Homepage = "https://github.com/smjc-org/py-submit/tree/main"
Documentation = "https://github.com/smjc-org/py-submit/blob/main/README.md"
Repository = "https://github.com/smjc-org/py-submit.git"
Issues = "https://github.com/smjc-org/py-submit/issues"
Changelog = "https://github.com/smjc-org/py-submit/tree/main/CHANGELOG.md"

[project.scripts]
submit = "submit.submit:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pytest==8.4.2",
    "pytest-cov==6.1.1",
    "ruff==0.15.17",
    "setuptools==82.0.1"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -l --tb=auto --color=yes"
testpaths = ["tests"]
pythonpath = [""]
verbosity_test_cases = 2
verbosity_assertions = 2

[tool.ruff]
line-length = 144
